--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a class="logo" href="index.html"><img src="images/logo.png" width="200px" height="180px"></a>
+				<a class="logo" href="index.html">DjDanDemo</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
