--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a class="logo" href="index.html">DjDanDemo</a>
+				<a class="logo" href="index.html">CandyPixDemo</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -35,7 +35,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>Industrious</h1>
+					<h1>CandyPix Demo</h1>
 					<p>A responsive business oriented template with a video background<br />
 					designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
 				</div>
