--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<div class="inner">
 					<h1>CandyPix Demo</h1>
 					<p>A responsive business oriented template with a video background<br />
-					designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
+					designed by <a href="https://github.com/StuartDambi">TEMPLATED</a> and released under Candy Pre-prod.</p>
 				</div>
 				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
 			</section>
