--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>CandyPix Demo</h1>
+					<h1 style="font-family: cursive;">CandyPix Demo</h1>
 					<p>A responsive business oriented template with a video background<br />
 					designed by <a href="https://github.com/StuartDambi">TEMPLATED</a> and released under Candy Pre-prod.</p>
 				</div>
